; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http1client.c_h2o_httpclient__h1_on_connect.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http1client.c_h2o_httpclient__h1_on_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http1client_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_httpclient__h1_on_connect(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.st_h2o_http1client_t*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to i8*
  %10 = bitcast i8* %9 to %struct.st_h2o_http1client_t*
  store %struct.st_h2o_http1client_t* %10, %struct.st_h2o_http1client_t** %7, align 8
  %11 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %7, align 8
  %12 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @h2o_timer_is_linked(i32* %13)
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %7, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @setup_client(%struct.st_h2o_http1client_t* %19, i32* %20, i32* %21)
  %23 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %7, align 8
  %24 = call i32 @on_connection_ready(%struct.st_h2o_http1client_t* %23)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @h2o_timer_is_linked(i32*) #1

declare dso_local i32 @setup_client(%struct.st_h2o_http1client_t*, i32*, i32*) #1

declare dso_local i32 @on_connection_ready(%struct.st_h2o_http1client_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
